css/style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap');

:root {
    --primary-color:#5C4B7A;
    --text-color: white;
    --color-terminal: #3d4050;
    --border-diameter: 4px;
}

* {
    font-family: 'Source Code Pro', monospace;
}

/* Body */
body {
    height: 100vh;
    background-color: var(--primary-color);
    color: var(--text-color);
}

/* Main */
main {
    padding: 25px;
    box-shadow: 8px 8px 35px 8px rgb(0 0 0 / 75%);
    border-radius: 14px;
}

/* Heading */ 
h1 {
    display: flex;
    justify-content: center;
    margin-top: 0;
}

/* Form && Input && Range */
input, button {
    border: none;
    outline: none;
}

#cipher {
    display: flex;
    gap: 6px; /* Espacio entre origin-input y result */
}

#origin-input, #result {
    background-color: var(--color-terminal);
    width: 100%;                                /* width: -webkit-fill-available; codigo anterior*/
    text-align: center;
}

#origin-input {
    flex: 1;
    padding: 8px;
    color: var(--text-color);
    border-radius: 7px 0 0 7px;
    font-size: 20px;
    word-wrap: break-word;
}

#result {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    height: auto;
    color: #5AF78D;
    padding: 8px;
    border-radius: 0 7px 7px 0;
    font-size: 20px;
    word-wrap: break-word;
}

.range-container {
    margin-top: 10px;
    display: grid;
    grid-template-columns: 1fr 30px;
    text-align: center;
    align-items: center;
}

input[type='range'] {
    -webkit-appearance: none;
    appearance: none;
    border-radius: 7px;
    background: var(--color-terminal);
    margin: 0;
    padding: 0 5px;
    height: 20px;
}

input[type='range']::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    cursor: pointer;
    background: var(--text-color);
    border-radius: 50%;
    height: 10px;
    width: 10px;
}

